@@ -15,7 +15,7 @@ The rules for this file:
 ------------------------------------------------------------------------------
 ??/??/?? tylerjereddy, richardjgowers, IAlibay, hmacdope, orbeckst, cbouy,
          lilyminium, daveminh, jbarnoud, yuxuanzhuang, VOD555, ianmkenney, 
-         calcraven
+         calcraven， xiki-tempula
 
   * 2.0.0
 
@@ -95,6 +95,7 @@ Changes
   * Changes the minimal NumPy version to 1.16.0 (Issue #2827, PR #2831)
   * Sets the minimal RDKit version for CI to 2020.03.1 (Issue #2827, PR #2831)
   * Removes deprecated waterdynamics.HydrogenBondLifetimes (PR #2842)
+  * Make NeighborSearch return empty atomgroup, residue, segments instead of list (Issue #2892, PR #2907)
 
 Deprecations
 
